[package]
name = "shyper-cli-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
fdisk = "0.2.0"
libc = "0.2.154"
log = "0.4.21"
nix = { version = "0.29.0", features = ["signal"] }
once_cell = "1.19.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
signal-hook = "0.3.17"

